[tool.poetry]
authors = [
    "Michael Aydinbas <michael.aydinbas@gmail.com>",
    "Ariz Weber <ariz.weber@protonmail.com>",
    "CorrelAid <info@correlaid.org>",
    "Daniel Pleus <danielpleus@gmail.com>",
    "Felix Schmitz <felix.schmitz@philosophy-economics.de>",
    "Frederik Hering <jobs.fhering@gmail.com>",
    "Marco Hübner <marco_huebner1@gmx.de>"
]
maintainers = ["Michael Aydinbas <michael.aydinbas@gmail.com>"]
description = "Python wrapper for GENESIS web service interface (API) of the Federal Statistical Office."
name = "pystatis"
version = "0.2.0"
readme = "README.md"
repository = "https://github.com/CorrelAid/pystatis"
documentation = "https://correlaid.github.io/pystatis/"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
pandas = "^2.0"
tabulate = "^0.9.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.4"
black = "^23.0"
flake8-docstrings = "^1.6.0"
isort = "^5.10.1"
mypy = "^1.0"
pre-commit = "^3.0"
pylint = "^3.0"
pytest = "^7.1.1"
pytest-cov = "^4.0"
safety = "^2.0.0"
flake8 = "^3.0"
jupyter = "^1.0.0"
pytest-mock = "^3.8.2"
python-dotenv = "^1.0.0"
sphinx = "^7.0"
sphinx-rtd-theme = "^1.3.0"
myst-parser = "^2.0.0"
jupytext = "^1.16.1"
urllib3 = {extras = ["appengine"], version = "^2.2.1"}

[tool.black]
line-length = 80
target-version = ['py310']

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.pytest.ini_options]
addopts = "-s -v"
log_cli = false

[tool.isort]
profile = "black"
line_length = 80
