[tool.poetry]
authors = [
    "Michael Aydinbas <michael.aydinbas@gmail.com>",
    "Ariz Weber <ariz.weber@protonmail.com>",
    "CorrelAid <info@correlaid.org>",
    "Daniel Pleus <danielpleus@gmail.com>",
    "Felix Schmitz <felix.schmitz@philosophy-economics.de>",
    "Frederik Hering <jobs.fhering@gmail.com>",
    "Marco Hübner <marco_huebner1@gmx.de>",
    "Jonas Berger <jonas.bergner97@gmx.de>",
]
maintainers = ["Michael Aydinbas <michael.aydinbas@gmail.com>"]
description = "Python wrapper for GENESIS web service interface (API) of the Federal Statistical Office."
name = "pystatis"
version = "0.4.0"
readme = "README.md"
repository = "https://github.com/CorrelAid/pystatis"
documentation = "https://correlaid.github.io/pystatis/"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
pandas = "^2.0"
tabulate = "^0.9.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.4"
ruff = "^0.8.1"
jupyter = "^1.0.0"
jupytext = "^1.16.1"
mypy = "^1.0"
myst-parser = "^4.0.0"
notebook = "^7.3.0"
pre-commit = "^4.0.1"
pylint = "^3.0"
pytest = "^8.0.0"
pytest-cov = "^6.0.0"
pytest-mock = "^3.8.2"
python-dotenv = "^1.0.0"
requests-toolbelt = "^1.0.0"
sphinx = "^7.0"
sphinx-rtd-theme = "^3.0.0"
urllib3 = { extras = ["appengine"], version = "^2.2.1" }
pytest-vcr = "^1.0.2"
nbsphinx = "^0.9.5"


[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.pytest.ini_options]
addopts = "-s -v"
log_cli = false


[tool.safety]
full_report = true
ignore = "67599,70612"
