[project]
name = "pystatis"
version = "0.5.4"
description = "Python wrapper for GENESIS web service interface (API) of the Federal Statistical Office."
authors = [
    { name = "Michael Aydinbas", email = "michael.aydinbas@gmail.com" },
    { name = "Ariz Weber", email = "ariz.weber@protonmail.com" },
    { name = "CorrelAid", email = "info@correlaid.org" },
    { name = "Daniel Pleus", email = "danielpleus@gmail.com" },
    { name = "Felix Schmitz", email = "felix.schmitz@philosophy-economics.de" },
    { name = "Frederik Hering", email = "jobs.fhering@gmail.com" },
    { name = "Marco Hübner", email = "marco_huebner1@gmx.de" },
    { name = "Jonas Berger", email = "jonas.bergner97@gmx.de" },
]
requires-python = ">=3.11"
readme = "README.md"
maintainers = [
    { name = "Michael Aydinbas", email = "michael.aydinbas@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["requests>=2.27.1,<3", "pandas~=2.0", "tabulate>=0.9.0,<0.10"]

[project.urls]
Repository = "https://github.com/CorrelAid/pystatis"
Documentation = "https://correlaid.github.io/pystatis/"

[dependency-groups]
dev = [
    "bandit>=1.7.4,<2",
    "ruff>=0.11.0,<0.12",
    "jupyter>=1.0.0,<2",
    "jupytext>=1.16.1,<2",
    "mypy~=1.0",
    "myst-parser>=4.0.0,<5",
    "notebook>=7.4.3,<8",
    "pre-commit>=4.0.1,<5",
    "pylint~=3.0",
    "pytest>=8.0.0,<9",
    "pytest-cov>=6.0.0,<7",
    "pytest-mock>=3.8.2,<4",
    "python-dotenv>=1.0.0,<2",
    "requests-toolbelt>=1.0.0,<2",
    "sphinx~=7.0",
    "sphinx-rtd-theme>=3.0.0,<4",
    "pytest-vcr>=1.0.2,<2",
    "nbsphinx>=0.9.5,<0.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "-s -v"
log_cli = false

[tool.safety]
full_report = true
ignore = "67599,70612"

[tool.ruff]
line-length = 100
